# echobird_core-local

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/commands/: agent.rs  ai_career.rs  app.rs  bundled.rs  local_server.rs  mod.rs  models.rs  parasite.rs  pulse.rs  secret.rs  ssh.rs  tools.rs
src/error/: mod.rs
src/services/: agent.rs  bundled_assets.rs  context_window.rs  mod.rs  model_proxy.rs  models.rs  pulse_archive.rs  settings.rs  tool_installer.rs
src/storage/: global.rs  memory.rs  mod.rs  model.rs  schema.sql  settings.rs  sqlite.rs
tests/: agent_tauri_integration.rs  ai_career_stub_shape.rs  category_inference_test.rs  command_signature_shape.rs  local_engine_stub_shape.rs  local_server_command_shape.rs  pulse_fetch_e2e.rs  pulse_fetch_smoke.rs  pulse_ipc_smoke.rs  scan_tools_regression.rs  tauri_command_route.rs  token_limit_e2e.rs
