[package]
name = "echobird_core"
version = "0.3.4"
edition = "2021"
rust-version = "1.77.2"
description = "Clean-room reimplementation of the EchoBird private backend. See src/lib.rs for the derivation contract."
license = "BUSL-1.1"
authors = ["EchoBird (community clean-room)"]
publish = false

[lib]
name = "echobird_core"
crate-type = ["lib"]

# ─── Tauri host (matches the public thin shell's plugin set) ─────
[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"

# ─── Async + HTTP for upstream forwarding ───────────────────────
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"

# ─── Serde + JSON ───────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ─── Storage (SQLite — single-file, no daemon) ──────────────────
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }

# ─── Errors (typed, not anyhow soup) ────────────────────────────
thiserror = "1"

# ─── Crypto (AES-GCM for `enc:v1:` API-key wrapping) ──────────
aes-gcm = "0.10"
rand = "0.8"

# ─── Misc utilities ─────────────────────────────────────────────
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
parking_lot = "0.12"
once_cell = "1"
url = "2"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
